# CodeFace

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE.md  README.md  README.zh-CN.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml
docs/: README.md  architecture.md  ci-release.md  development.md  security.md  theme-format.md  troubleshooting.md  user-guide.md
gui/: Cargo.toml  build.rs
gui/src/: cdp.rs  i18n.rs  main.rs  paths.rs  theme.rs  updater.rs
gui/src/platform/: macos.rs  mod.rs  windows.rs
resources/app-icon/: CodeFace.icns
resources/assets/: codeface-inject.js  codeface-settings.css  codeface-settings.js  codeface.css
resources/i18n/: en.json  zh-CN.json
resources/theme-pack-template/: README.md  codeface.css  theme.json
resources/theme-packs/cyberpunk/: codeface.css  theme.json
resources/theme-packs/fzd/: codeface.css  theme.json
resources/theme-packs/lovely-girl/: codeface.css  theme.json
resources/theme-packs/messi/: codeface.css  theme.json
resources/theme-packs/qq2007/: codeface.css  theme.json
skills/codeface/: SKILL.md
skills/codeface/agents/: openai.yaml
skills/codeface/references/: runtime-workflows.md  theme-contract.md
xtask/: Cargo.toml
xtask/src/: main.rs
